test/data/resolver/valid/call_standalone_yield_items_reordered.cypher
CALL test.my.proc('Stefan', 1) YIELD country_code, city
