test/data/resolver/invalid/call_yield_property_lookup.cypher
CALL test.my.proc('Stefan', 1) YIELD city
RETURN city.length
